tests/errors/semantic/blocking/APPEND_LIST_INCOMPATIBLE_TYPES_3.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = [[1, 2, 3]]
a.append((4, 7))

